overlapping card fix [WCMSFEQ-979]

--- a/CancerGov/_src/Scripts/NCI/UX/PageSpecific/CTHP/CTHPPage.scss
+++ b/CancerGov/_src/Scripts/NCI/UX/PageSpecific/CTHP/CTHPPage.scss
@@ -123,8 +123,7 @@
 }
 .cthp-content .cardBody {
 	padding: 0.625em 0.8em;
-
-	flex: 1;
+	flex: 1 0 auto;
     display: flex;
 	flex-direction: column;
 	margin-bottom: 0;
